Szenen auf den neuen CarSelector umgestellt
außerdem gitignore aktuallisert

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@
 *.sln
 *.userprefs
 *.pidb
+Library/assetDatabase3
+Library/expandedItems
+Library/AssetServerCacheV3
+Library/InspectorExpandedItems.asset
+Library/assetDatabase3
+Library/expandedItems
+Library/guidmapper
+LastIgnition.userprefs
